// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-tabs navigation should NOT go to next tab on keyboard event Enter 1`] = `
<mg-tabs active-tab="1">
  <!---->
  <header aria-label="Sample label" class="mg-tabs-header" role="tablist">
    <button aria-controls="pannel-1" aria-selected="true" class="mg-tabs-header__button mg-tabs-header__button--active" data-index="1" id="id-1" role="tab" tabindex="0">
      batman
    </button>
    <button aria-controls="pannel-2" aria-selected="false" class="mg-tabs-header__button" data-index="2" id="id-2" role="tab" tabindex="-1">
      joker
    </button>
  </header>
  <article aria-labelledby="id-1" id="pannel-1" role="tabpanel" tabindex="0">
    <div slot="tab_content-1">
      Content 1
    </div>
  </article>
  <article aria-labelledby="id-1" hidden="" id="pannel-2" role="tabpanel" tabindex="-1">
    <div slot="tab_content-2">
      Content 2
    </div>
  </article>
</mg-tabs>
`;

exports[`mg-tabs navigation should NOT go to next tab on keyboard event Enter 2`] = `
<mg-tabs active-tab="1">
  <!---->
  <header aria-label="Sample label" class="mg-tabs-header" role="tablist">
    <button aria-controls="pannel-1" aria-selected="true" class="mg-tabs-header__button mg-tabs-header__button--active" data-index="1" id="id-1" role="tab" tabindex="0">
      batman
    </button>
    <button aria-controls="pannel-2" aria-selected="false" class="mg-tabs-header__button" data-index="2" id="id-2" role="tab" tabindex="-1">
      joker
    </button>
  </header>
  <article aria-labelledby="id-1" id="pannel-1" role="tabpanel" tabindex="0">
    <div slot="tab_content-1">
      Content 1
    </div>
  </article>
  <article aria-labelledby="id-1" hidden="" id="pannel-2" role="tabpanel" tabindex="-1">
    <div slot="tab_content-2">
      Content 2
    </div>
  </article>
</mg-tabs>
`;

exports[`mg-tabs navigation should NOT go to next tab on keyboard event Enter 3`] = `
<mg-tabs active-tab="1">
  <!---->
  <header aria-label="Sample label" class="mg-tabs-header" role="tablist">
    <button aria-controls="pannel-1" aria-selected="true" class="mg-tabs-header__button mg-tabs-header__button--active" data-index="1" id="id-1" role="tab" tabindex="0">
      batman
    </button>
    <button aria-controls="pannel-2" aria-selected="false" class="mg-tabs-header__button" data-index="2" id="id-2" role="tab" tabindex="-1">
      joker
    </button>
  </header>
  <article aria-labelledby="id-1" id="pannel-1" role="tabpanel" tabindex="0">
    <div slot="tab_content-1">
      Content 1
    </div>
  </article>
  <article aria-labelledby="id-1" hidden="" id="pannel-2" role="tabpanel" tabindex="-1">
    <div slot="tab_content-2">
      Content 2
    </div>
  </article>
</mg-tabs>
`;

exports[`mg-tabs navigation should NOT go to next tab on keyboard event Space 1`] = `
<mg-tabs active-tab="1">
  <!---->
  <header aria-label="Sample label" class="mg-tabs-header" role="tablist">
    <button aria-controls="pannel-1" aria-selected="true" class="mg-tabs-header__button mg-tabs-header__button--active" data-index="1" id="id-1" role="tab" tabindex="0">
      batman
    </button>
    <button aria-controls="pannel-2" aria-selected="false" class="mg-tabs-header__button" data-index="2" id="id-2" role="tab" tabindex="-1">
      joker
    </button>
  </header>
  <article aria-labelledby="id-1" id="pannel-1" role="tabpanel" tabindex="0">
    <div slot="tab_content-1">
      Content 1
    </div>
  </article>
  <article aria-labelledby="id-1" hidden="" id="pannel-2" role="tabpanel" tabindex="-1">
    <div slot="tab_content-2">
      Content 2
    </div>
  </article>
</mg-tabs>
`;

exports[`mg-tabs navigation should NOT go to next tab on keyboard event Space 2`] = `
<mg-tabs active-tab="1">
  <!---->
  <header aria-label="Sample label" class="mg-tabs-header" role="tablist">
    <button aria-controls="pannel-1" aria-selected="true" class="mg-tabs-header__button mg-tabs-header__button--active" data-index="1" id="id-1" role="tab" tabindex="0">
      batman
    </button>
    <button aria-controls="pannel-2" aria-selected="false" class="mg-tabs-header__button" data-index="2" id="id-2" role="tab" tabindex="-1">
      joker
    </button>
  </header>
  <article aria-labelledby="id-1" id="pannel-1" role="tabpanel" tabindex="0">
    <div slot="tab_content-1">
      Content 1
    </div>
  </article>
  <article aria-labelledby="id-1" hidden="" id="pannel-2" role="tabpanel" tabindex="-1">
    <div slot="tab_content-2">
      Content 2
    </div>
  </article>
</mg-tabs>
`;

exports[`mg-tabs navigation should NOT go to next tab on keyboard event Space 3`] = `
<mg-tabs active-tab="1">
  <!---->
  <header aria-label="Sample label" class="mg-tabs-header" role="tablist">
    <button aria-controls="pannel-1" aria-selected="true" class="mg-tabs-header__button mg-tabs-header__button--active" data-index="1" id="id-1" role="tab" tabindex="0">
      batman
    </button>
    <button aria-controls="pannel-2" aria-selected="false" class="mg-tabs-header__button" data-index="2" id="id-2" role="tab" tabindex="-1">
      joker
    </button>
  </header>
  <article aria-labelledby="id-1" id="pannel-1" role="tabpanel" tabindex="0">
    <div slot="tab_content-1">
      Content 1
    </div>
  </article>
  <article aria-labelledby="id-1" hidden="" id="pannel-2" role="tabpanel" tabindex="-1">
    <div slot="tab_content-2">
      Content 2
    </div>
  </article>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next tab on click event 1`] = `
<mg-tabs active-tab="1">
  <!---->
  <header aria-label="Sample label" class="mg-tabs-header" role="tablist">
    <button aria-controls="pannel-1" aria-selected="true" class="mg-tabs-header__button mg-tabs-header__button--active" data-index="1" id="id-1" role="tab" tabindex="0">
      batman
    </button>
    <button aria-controls="pannel-2" aria-selected="false" class="mg-tabs-header__button" data-index="2" id="id-2" role="tab" tabindex="-1">
      joker
    </button>
  </header>
  <article aria-labelledby="id-1" id="pannel-1" role="tabpanel" tabindex="0">
    <div slot="tab_content-1">
      Content 1
    </div>
  </article>
  <article aria-labelledby="id-1" hidden="" id="pannel-2" role="tabpanel" tabindex="-1">
    <div slot="tab_content-2">
      Content 2
    </div>
  </article>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next tab on click event 2`] = `
<mg-tabs active-tab="2">
  <!---->
  <header aria-label="Sample label" class="mg-tabs-header" role="tablist">
    <button aria-controls="pannel-1" aria-selected="false" class="mg-tabs-header__button" data-index="1" id="id-1" role="tab" tabindex="-1">
      batman
    </button>
    <button aria-controls="pannel-2" aria-selected="true" class="mg-tabs-header__button mg-tabs-header__button--active" data-index="2" id="id-2" role="tab" tabindex="0">
      joker
    </button>
  </header>
  <article aria-labelledby="id-2" hidden="" id="pannel-1" role="tabpanel" tabindex="-1">
    <div slot="tab_content-1">
      Content 1
    </div>
  </article>
  <article aria-labelledby="id-2" id="pannel-2" role="tabpanel" tabindex="0">
    <div slot="tab_content-2">
      Content 2
    </div>
  </article>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next tab on click event 3`] = `
<mg-tabs active-tab="1">
  <!---->
  <header class="mg-tabs-header" role="tablist">
    <button aria-controls="pannel-1" aria-selected="true" class="mg-tabs-header__button mg-tabs-header__button--active" data-index="1" id="id-1" role="tab" tabindex="0">
      <mg-icon icon="check"></mg-icon>
      Batman
      <mg-badge variant="info">
        2
      </mg-badge>
    </button>
    <button aria-controls="pannel-2" aria-selected="false" class="mg-tabs-header__button" data-index="2" id="id-2" role="tab" tabindex="-1">
      <mg-icon icon="cross"></mg-icon>
      Joker
      <mg-badge variant="info">
        2
      </mg-badge>
    </button>
  </header>
  <article aria-labelledby="id-1" id="pannel-1" role="tabpanel" tabindex="0">
    <div slot="tab_content-1">
      Content 1
    </div>
  </article>
  <article aria-labelledby="id-1" hidden="" id="pannel-2" role="tabpanel" tabindex="-1">
    <div slot="tab_content-2">
      Content 2
    </div>
  </article>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next tab on click event 4`] = `
<mg-tabs active-tab="2">
  <!---->
  <header class="mg-tabs-header" role="tablist">
    <button aria-controls="pannel-1" aria-selected="false" class="mg-tabs-header__button" data-index="1" id="id-1" role="tab" tabindex="-1">
      <mg-icon icon="check"></mg-icon>
      Batman
      <mg-badge variant="info">
        2
      </mg-badge>
    </button>
    <button aria-controls="pannel-2" aria-selected="true" class="mg-tabs-header__button mg-tabs-header__button--active" data-index="2" id="id-2" role="tab" tabindex="0">
      <mg-icon icon="cross"></mg-icon>
      Joker
      <mg-badge variant="info">
        2
      </mg-badge>
    </button>
  </header>
  <article aria-labelledby="id-2" hidden="" id="pannel-1" role="tabpanel" tabindex="-1">
    <div slot="tab_content-1">
      Content 1
    </div>
  </article>
  <article aria-labelledby="id-2" id="pannel-2" role="tabpanel" tabindex="0">
    <div slot="tab_content-2">
      Content 2
    </div>
  </article>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next tab on keyboard event 1`] = `
<mg-tabs active-tab="1">
  <!---->
  <header aria-label="Sample label" class="mg-tabs-header" role="tablist">
    <button aria-controls="pannel-1" aria-selected="true" class="mg-tabs-header__button mg-tabs-header__button--active" data-index="1" id="id-1" role="tab" tabindex="0">
      batman
    </button>
    <button aria-controls="pannel-2" aria-selected="false" class="mg-tabs-header__button" data-index="2" id="id-2" role="tab" tabindex="-1">
      joker
    </button>
  </header>
  <article aria-labelledby="id-1" id="pannel-1" role="tabpanel" tabindex="0">
    <div slot="tab_content-1">
      Content 1
    </div>
  </article>
  <article aria-labelledby="id-1" hidden="" id="pannel-2" role="tabpanel" tabindex="-1">
    <div slot="tab_content-2">
      Content 2
    </div>
  </article>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next tab on keyboard event 2`] = `
<mg-tabs active-tab="1">
  <!---->
  <header aria-label="Sample label" class="mg-tabs-header" role="tablist">
    <button aria-controls="pannel-1" aria-selected="true" class="mg-tabs-header__button mg-tabs-header__button--active" data-index="1" id="id-1" role="tab" tabindex="0">
      batman
    </button>
    <button aria-controls="pannel-2" aria-selected="false" class="mg-tabs-header__button" data-index="2" id="id-2" role="tab" tabindex="-1">
      joker
    </button>
  </header>
  <article aria-labelledby="id-1" id="pannel-1" role="tabpanel" tabindex="0">
    <div slot="tab_content-1">
      Content 1
    </div>
  </article>
  <article aria-labelledby="id-1" hidden="" id="pannel-2" role="tabpanel" tabindex="-1">
    <div slot="tab_content-2">
      Content 2
    </div>
  </article>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next tab on keyboard event 3`] = `
<mg-tabs active-tab="2">
  <!---->
  <header aria-label="Sample label" class="mg-tabs-header" role="tablist">
    <button aria-controls="pannel-1" aria-selected="false" class="mg-tabs-header__button" data-index="1" id="id-1" role="tab" tabindex="-1">
      batman
    </button>
    <button aria-controls="pannel-2" aria-selected="true" class="mg-tabs-header__button mg-tabs-header__button--active" data-index="2" id="id-2" role="tab" tabindex="0">
      joker
    </button>
  </header>
  <article aria-labelledby="id-2" hidden="" id="pannel-1" role="tabpanel" tabindex="-1">
    <div slot="tab_content-1">
      Content 1
    </div>
  </article>
  <article aria-labelledby="id-2" id="pannel-2" role="tabpanel" tabindex="0">
    <div slot="tab_content-2">
      Content 2
    </div>
  </article>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next tab on keyboard event 4`] = `
<mg-tabs active-tab="1">
  <!---->
  <header aria-label="Sample label" class="mg-tabs-header" role="tablist">
    <button aria-controls="pannel-1" aria-selected="true" class="mg-tabs-header__button mg-tabs-header__button--active" data-index="1" id="id-1" role="tab" tabindex="0">
      batman
    </button>
    <button aria-controls="pannel-2" aria-selected="false" class="mg-tabs-header__button" data-index="2" id="id-2" role="tab" tabindex="-1">
      joker
    </button>
  </header>
  <article aria-labelledby="id-1" id="pannel-1" role="tabpanel" tabindex="0">
    <div slot="tab_content-1">
      Content 1
    </div>
  </article>
  <article aria-labelledby="id-1" hidden="" id="pannel-2" role="tabpanel" tabindex="-1">
    <div slot="tab_content-2">
      Content 2
    </div>
  </article>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next tab, and keep focus if it's the last one on keyboard event 1`] = `
<mg-tabs active-tab="1">
  <!---->
  <header aria-label="Sample label" class="mg-tabs-header" role="tablist">
    <button aria-controls="pannel-1" aria-selected="true" class="mg-tabs-header__button mg-tabs-header__button--active" data-index="1" id="id-1" role="tab" tabindex="0">
      batman
    </button>
    <button aria-controls="pannel-2" aria-selected="false" class="mg-tabs-header__button" data-index="2" id="id-2" role="tab" tabindex="-1">
      joker
    </button>
  </header>
  <article aria-labelledby="id-1" id="pannel-1" role="tabpanel" tabindex="0">
    <div slot="tab_content-1">
      Content 1
    </div>
  </article>
  <article aria-labelledby="id-1" hidden="" id="pannel-2" role="tabpanel" tabindex="-1">
    <div slot="tab_content-2">
      Content 2
    </div>
  </article>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next tab, and keep focus if it's the last one on keyboard event 2`] = `
<mg-tabs active-tab="1">
  <!---->
  <header aria-label="Sample label" class="mg-tabs-header" role="tablist">
    <button aria-controls="pannel-1" aria-selected="true" class="mg-tabs-header__button mg-tabs-header__button--active" data-index="1" id="id-1" role="tab" tabindex="0">
      batman
    </button>
    <button aria-controls="pannel-2" aria-selected="false" class="mg-tabs-header__button" data-index="2" id="id-2" role="tab" tabindex="-1">
      joker
    </button>
  </header>
  <article aria-labelledby="id-1" id="pannel-1" role="tabpanel" tabindex="0">
    <div slot="tab_content-1">
      Content 1
    </div>
  </article>
  <article aria-labelledby="id-1" hidden="" id="pannel-2" role="tabpanel" tabindex="-1">
    <div slot="tab_content-2">
      Content 2
    </div>
  </article>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next tab, and keep focus if it's the last one on keyboard event 3`] = `
<mg-tabs active-tab="2">
  <!---->
  <header aria-label="Sample label" class="mg-tabs-header" role="tablist">
    <button aria-controls="pannel-1" aria-selected="false" class="mg-tabs-header__button" data-index="1" id="id-1" role="tab" tabindex="-1">
      batman
    </button>
    <button aria-controls="pannel-2" aria-selected="true" class="mg-tabs-header__button mg-tabs-header__button--active" data-index="2" id="id-2" role="tab" tabindex="0">
      joker
    </button>
  </header>
  <article aria-labelledby="id-2" hidden="" id="pannel-1" role="tabpanel" tabindex="-1">
    <div slot="tab_content-1">
      Content 1
    </div>
  </article>
  <article aria-labelledby="id-2" id="pannel-2" role="tabpanel" tabindex="0">
    <div slot="tab_content-2">
      Content 2
    </div>
  </article>
</mg-tabs>
`;

exports[`mg-tabs navigation should go to next tab, and keep focus if it's the last one on keyboard event 4`] = `
<mg-tabs active-tab="2">
  <!---->
  <header aria-label="Sample label" class="mg-tabs-header" role="tablist">
    <button aria-controls="pannel-1" aria-selected="false" class="mg-tabs-header__button" data-index="1" id="id-1" role="tab" tabindex="-1">
      batman
    </button>
    <button aria-controls="pannel-2" aria-selected="true" class="mg-tabs-header__button mg-tabs-header__button--active" data-index="2" id="id-2" role="tab" tabindex="0">
      joker
    </button>
  </header>
  <article aria-labelledby="id-2" hidden="" id="pannel-1" role="tabpanel" tabindex="-1">
    <div slot="tab_content-1">
      Content 1
    </div>
  </article>
  <article aria-labelledby="id-2" id="pannel-2" role="tabpanel" tabindex="0">
    <div slot="tab_content-2">
      Content 2
    </div>
  </article>
</mg-tabs>
`;

exports[`mg-tabs template display only slots with name "tab_content-*" 1`] = `
<mg-tabs active-tab="1">
  <!---->
  <div hidden="">
    dummy content
  </div>
  <header aria-label="Sample label" class="mg-tabs-header" role="tablist">
    <button aria-controls="pannel-1" aria-selected="true" class="mg-tabs-header__button mg-tabs-header__button--active" data-index="1" id="identifier-1" role="tab" tabindex="0">
      Batman
    </button>
    <button aria-controls="pannel-2" aria-selected="false" class="mg-tabs-header__button" data-index="2" id="identifier-2" role="tab" tabindex="-1">
      Joker
    </button>
  </header>
  <article aria-labelledby="identifier-1" id="pannel-1" role="tabpanel" tabindex="0">
    <div slot="tab_content-1">
      Content 1
    </div>
  </article>
  <article aria-labelledby="identifier-1" hidden="" id="pannel-2" role="tabpanel" tabindex="-1">
    <div slot="tab_content-2">
      Content 2
    </div>
  </article>
</mg-tabs>
`;

exports[`mg-tabs template display tabs with activeProps set by props 1`] = `
<mg-tabs active-tab="2">
  <!---->
  <header aria-label="Sample label" class="mg-tabs-header" role="tablist">
    <button aria-controls="pannel-1" aria-selected="false" class="mg-tabs-header__button" data-index="1" id="identifier-1" role="tab" tabindex="-1">
      Tab 1
    </button>
    <button aria-controls="pannel-2" aria-selected="true" class="mg-tabs-header__button mg-tabs-header__button--active" data-index="2" id="identifier-2" role="tab" tabindex="0">
      Tab 2
    </button>
    <button aria-controls="pannel-3" aria-selected="false" class="mg-tabs-header__button" data-index="3" id="identifier-3" role="tab" tabindex="-1">
      Tab 3
    </button>
  </header>
  <article aria-labelledby="identifier-2" hidden="" id="pannel-1" role="tabpanel" tabindex="-1">
    <div slot="tab_content-1">
      Content 1
    </div>
    <div slot="tab_content-1">
      Content 1
    </div>
  </article>
  <article aria-labelledby="identifier-2" id="pannel-2" role="tabpanel" tabindex="0">
    <div slot="tab_content-2">
      Content 2
    </div>
  </article>
  <article aria-labelledby="identifier-2" hidden="" id="pannel-3" role="tabpanel" tabindex="-1"></article>
</mg-tabs>
`;

exports[`mg-tabs template render 1`] = `
<mg-tabs active-tab="1">
  <!---->
  <header aria-label="Sample label" class="mg-tabs-header" role="tablist">
    <button aria-controls="pannel-1" aria-selected="true" class="mg-tabs-header__button mg-tabs-header__button--active" data-index="1" id="identifier-1" role="tab" tabindex="0">
      Batman
    </button>
    <button aria-controls="pannel-2" aria-selected="false" class="mg-tabs-header__button" data-index="2" id="identifier-2" role="tab" tabindex="-1">
      Joker
    </button>
  </header>
  <article aria-labelledby="identifier-1" id="pannel-1" role="tabpanel" tabindex="0">
    <div slot="tab_content-1">
      Content 1
    </div>
  </article>
  <article aria-labelledby="identifier-1" hidden="" id="pannel-2" role="tabpanel" tabindex="-1">
    <div slot="tab_content-2">
      Content 2
    </div>
  </article>
</mg-tabs>
`;

exports[`mg-tabs template render 2`] = `
<mg-tabs active-tab="1">
  <!---->
  <header aria-label="Sample label" class="mg-tabs-header" role="tablist">
    <button aria-controls="pannel-1" aria-selected="true" class="mg-tabs-header__button mg-tabs-header__button--active" data-index="1" id="identifier-1" role="tab" tabindex="0">
      <mg-icon icon="check"></mg-icon>
      Batman
      <mg-badge variant="info">
        2
      </mg-badge>
    </button>
    <button aria-controls="pannel-2" aria-selected="false" class="mg-tabs-header__button" data-index="2" id="identifier-2" role="tab" tabindex="-1">
      <mg-icon icon="cross"></mg-icon>
      Joker
      <mg-badge variant="info">
        2
      </mg-badge>
    </button>
  </header>
  <article aria-labelledby="identifier-1" id="pannel-1" role="tabpanel" tabindex="0">
    <div slot="tab_content-1">
      Content 1
    </div>
  </article>
  <article aria-labelledby="identifier-1" hidden="" id="pannel-2" role="tabpanel" tabindex="-1">
    <div slot="tab_content-2">
      Content 2
    </div>
  </article>
</mg-tabs>
`;
